added express JS framework

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Node JS</title>
+    <title>Uer Node JS</title>
     <style>
       body {
         color: white;
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <h1>Error</h1>
+    <h1>User</h1>
     <p>Upppsss... Such a page does not exist. Return to main page</p>
     <a href="/"> Main page</a>
   </body>
