--- a/views/about.ejs
+++ b/views/about.ejs
@@ -4,17 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Node JS</title>
-    <style>
-      body {
-        color: white;
-        background: #333;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <h1>Hello Hode!!</h1>
-    <p>this about node js</p>
-    <a href="/"> Main page</a>
+    <%- include ("blocks/header") -%>
+
+    <main>
+      <h1>About us page</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, ipsum eos. Aspernatur labore eligendi
+        nesciunt, libero corporis dolore laudantium tenetur aperiam ipsum facilis nostrum! Facere doloremque vitae quia
+        quos nesciunt.
+      </p>
+    </main>
   </body>
 </html>
