--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,20 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Node JS</title>
-    <style>
-      body {
-        color: white;
-        background: #333;
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
-    <h1>Main page</h1>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus optio veritatis reiciendis maiores voluptatem,
-      mollitia esse tenetur delectus praesentium id hic quaerat sunt culpa, a veniam magni natus ad ratione!
-    </p>
-    <a href="/about"> Aboun us</a>
+    <%- include ("blocks/header") -%>
+
+    <main>
+      <h1>About us page</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, ipsum eos. Aspernatur labore eligendi
+        nesciunt, libero corporis dolore laudantium tenetur aperiam ipsum facilis nostrum! Facere doloremque vitae quia
+        quos nesciunt.
+      </p>
+    </main>
   </body>
 </html>
