--- a/views/error.ejs
+++ b/views/error.ejs
@@ -6,8 +6,17 @@
     <title>Error Node JS</title>
   </head>
   <body>
-    <h1>Error</h1>
-    <p>Upppsss... Such a page does not exist. Return to main page</p>
+    <header>
+      <span>Node <em>&</em> Express</span>
+      <nav>
+        <a href="/"> Main page</a>
+        <a href="/about"> About us</a>
+      </nav>
+    </header>
+    <main>
+      <h1>Error</h1>
+      <p>Upppsss... Such a page does not exist. Return to main page</p>
+    </main>
     <a href="/"> Main page</a>
   </body>
 </html>
