--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,12 +10,8 @@
     <%- include ("blocks/header") -%>
 
     <main>
-      <h1>About us page</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, ipsum eos. Aspernatur labore eligendi
-        nesciunt, libero corporis dolore laudantium tenetur aperiam ipsum facilis nostrum! Facere doloremque vitae quia
-        quos nesciunt.
-      </p>
+      <h1>Main page</h1>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, ipsum eos.</p>
     </main>
   </body>
 </html>
